# flexclass

./: .clang-format  CMakeLists.txt  LICENSE  README.md  UserGuide.md  codecov.yml  flexclass.hpp  test_script
.github/workflows/: Benchmark.yml  Release.yml  Standalone.yml  UpdateReadMe.yml  cmake.yml
cmake/: Deploy.cmake  Test.cmake
dev/bench/: data.js
include/flexclass/: algorithm.hpp  arrays.hpp  core.hpp  flexclass.hpp  memory.hpp  tuple.hpp  utility.hpp
scripts/: gen_cov_report.sh
tests/: CMakeLists.txt  allocation_tracker.cpp  allocation_tracker.h  asan.test.cpp  basic.test.cpp  flexclass.test.cpp  memory.test.cpp  sanitizers.test.cpp  shared_array_example.test.cpp  tuple.test.cpp  ubsan.test.cpp
tests/dependency/: CMakeLists.txt  main.test.cpp
tests/formatting/: CMakeLists.txt
tests/performance/: CMakeLists.txt  graph.test.cpp
tests/preprocessor/: CMakeLists.txt  include_flexclass.cpp
tests/unit/: CMakeLists.txt  allocation_tracker.h  basic.test.cpp  memory.test.cpp  memory_with_allocator.test.cpp  shared_array_example.test.cpp  variant_array_example.test.cpp
